# CompilerConstruction

A1/: A1.cabal
agquestions/: Makefile  Tdiagrams.cabal
agquestions/lib/: Examples.hs
agquestions/lib/AgQuestions/: AG.ag
agquestions/lib/AgQuestions/AG/: Base.ag
funflow/: .gitignore  FunFlow.cabal  stack.yaml
funflow/examples/: apply_id.fun  case_case_fn.fun  case_fn.fun  ccase_fn.fun  constructor.fun  dtype.fun  fib.fun  fun_id.fun  if_fn.fun  if_let.fun  lcase.fun  lcase_fn.fun  lcase_fun.fun  let_bool.fun  let_id.fun  let_if.fun  let_int.fun  list.fun  pair.fun  pcase.fun  pcase_fn.fun
funflow/readme/: readme.tex
funflow/src/: Ast.hs  Main.hs  TypeSystem.hs
funflow/src/FunFlow/: Ast.hs  Labeling.hs  Lib.hs  Parsing.hs  TypeSystem.hs
funflow/test/: Spec.hs
mf/: .gitattributes  .gitignore  Makefile  README  mf.cabal
mf/examples/: add.c  cp1.c  function_call1.c  function_call2.c  if.c  while.c  while_break.c  while_continue.c  while_nested.c
mf/examples/cp/: easy_cp.c  while1.c
mf/examples/error/: break_error.c  continue_error.c
mf/examples/slv/: easy_slv.c  ifthenelse1.c  ifthenelse2.c  long.c  while1.c
mf/readme/: .gitignore  readme.tex
mf/src/: AttributeGrammar.ag  AttributeGrammar.ag.orig  ConstPropagation.hs  ConstPropagation.hs.orig  Dev.hs  Main.hs  Monotone.hs  Parser.y  StronglyLiveVariables.hs
review/: A1.tex
tdiagrams/: .gitignore  Makefile  Tdiagrams.cabal  make-pdf.bat  stack.yaml
tdiagrams/inference rules/: .gitignore  Makefile  inference_rules.tex
tdiagrams/lib/CCO/: Diag2Picture.hs  TypeCheck.hs
tdiagrams/lib/CCO/Diag/AG/: Base.ag
tdiagrams/lib/CCO/Diag2Picture/: AG.ag  Util.hs
tdiagrams/lib/CCO/Diag2Picture/AG/: Base.ag  Generated.ag
tdiagrams/lib/CCO/TypeCheck/: AG.ag  AG.hs  Util.hs
tdiagrams/lib/CCO/TypeCheck/AG/: Base.ag
tdiagrams/readme/: Makefile  readme.tex
tdiagrams/test/: EndToEnd.hs  Programs.hs  Spec.hs
tdiagrams/uu-cco/src/CCO/: Component.hs
