name:                  Tdiagrams
version:               0.0.5.0
synopsis:              Utilities for drawing T-diagrams in LaTeX
description:           Project distribution for Mini Project B of the course on
                       Compiler Construction (INFOMCCO) at Utrecht University.
license:               AllRightsReserved
license-file:          LICENSE
category:              Compilers/Interpreters
copyright:             (c) 2008-2014 Utrecht University
author:                Stefan Holdermans
maintainer:            Stefan Holdermans <stefan@cs.uu.nl>
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Cco/MiniProjects
tested-with:           GHC == 6.8.2, GHC == 6.8.3, GHC == 6.10.1
build-type:            Simple
cabal-version:         >= 1.8
extra-source-files:    AUTHORS, Makefile, lib/AgQuestions/AG.ag

library
  hs-source-dirs:      lib
  exposed-modules:     AgQuestions.AG,
                       Examples
  build-depends:       base, uu-cco >= 0.1.0.1, containers

executable main
  main-is:             main.hs
  build-depends:       base, uu-cco >= 0.1.0.1, Tdiagrams
  hs-source-dirs:      bin
