
name          : FunFlow
version       : 0.2.0.0
synopsis      : Control-flow analysis of a simple functional programming language.
homepage      : Based on https://github.com/wickedcodeninja/FunFlow
license       : MIT
author        : Pepijn Kokke, Wout Elsinghorst, modified by Jurriaan Hage
copyright     : (c) 2013 Pepijn Kokke & Pepijn Kokke, (c) 2014 Wout Elsinghorst
category      : Language
build-type    : Simple
cabal-version : >= 1.8

library
  exposed-modules : FunFlow.Ast
                  , FunFlow.Labeling
                  , FunFlow.Lib
                  , FunFlow.Parsing
                  , FunFlow.TypeSystem
  build-depends   : base >= 4.5
                  , uu-parsinglib >= 2.8
                  , monad-supply >= 0.3
                  , mtl >= 2.1
                  , containers >= 0.5
  hs-source-dirs  : src
  extensions      : DoAndIfThenElse
  ghc-options     : -fwarn-incomplete-patterns

test-suite funflow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers >= 0.5
                     , FunFlow
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
